Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,7 @@ steps:
   inputs:
     provider: 'azurerm'
     command: 'init'
-    workingDirectory: 'configpath'
+    workingDirectory: '$(configpath)'
     backendServiceArm: 'next-level-service-connection'
     backendAzureRmStorageAccountName: 'itsolution'
     backendAzureRmContainerName: 'nextlevelcontainer'
@@ -21,7 +21,7 @@ steps:
   inputs:
     provider: 'azurerm'
     command: 'plan'
-    workingDirectory: 'configpath'
+    workingDirectory: '$(configpath)'
     environmentServiceNameAzureRM: 'next-level-service-connection'
 
 
