Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,6 +15,7 @@ stages:
             provider: 'azurerm'
             command: 'init'
             workingDirectory: '$(configpath)'
+            backendServiceArm: 'next-level-service-connection' 
             backendAzureRmStorageAccountName: 'itsolution'
             backendAzureRmContainerName: 'nextlevelcontainer'
             backendAzureRmKey: 'mytf.tfstate'
