--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,42 +1,8 @@
 trigger: none
-pool: apna-agent-pool
-variables:
-  configpath: "$(System.DefaultWorkingDirectory)/Nested map/Parent Module"
+pool: couldnest-pool
+
 stages:
-  - stage:
-    displayName: job planning
-    jobs:
-      - job:
-        displayName: myfirstjob
-        steps:
-        - task: TerraformTask@5
-          displayName: Iniatialization
-          inputs:
-            provider: 'azurerm'
-            command: 'init'
-            workingDirectory: '$(configpath)'
-            backendServiceArm: 'next-level-service-connection' 
-            backendAzureRmStorageAccountName: 'itsolution'
-            backendAzureRmContainerName: 'nextlevelcontainer'
-            backendAzureRmKey: 'mytf.tfstate'
-        - task: TerraformTask@5
-          inputs:
-            provider: 'azurerm'
-            command: 'plan'
-            workingDirectory: '$(configpath)'
-            environmentServiceNameAzureRM: 'next-level-service-connection'
-        - task: TerraformTask@5
-          inputs:
-            provider: 'azurerm'
-            command: 'apply'
-            workingDirectory: '"$(System.DefaultWorkingDirectory)/Nested map/Parent Module"'
-            environmentServiceNameAzureRM: 'next-level-service-connection'
-
-
-
-
-
-
-
-
+- task: TerraformInstaller@1
+  inputs:
+    terraformVersion: 'latest'
 
