--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,3 +6,13 @@ steps:
 - task: TerraformInstaller@1
   inputs:
     terraformVersion: 'latest'
+
+- task: TerraformTask@5
+  inputs:
+    provider: 'azurerm'
+    command: 'init'
+    workingDirectory: '$(System.DefaultWorkingDirectory)/Nested map/Parent Module'
+    backendServiceArm: 'cloud-next'
+    backendAzureRmStorageAccountName: 'cloudneststg'
+    backendAzureRmContainerName: 'cloudnestcontainer'
+    backendAzureRmKey: '.tfstate'
