--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,3 +16,12 @@ steps:
     backendAzureRmStorageAccountName: 'cloudneststg'
     backendAzureRmContainerName: 'cloudnestcontainer'
     backendAzureRmKey: '.tfstate'
+
+- task: TerraformTask@5
+  inputs:
+    provider: 'azurerm'
+    command: 'plan'
+    environmentServiceNameAzureRM: 'cloud-next'
+
+
+    
